2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix typo in order to correctly substitute XCursor CFLAGS

2007-09-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.20.0.

2007-09-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.92.

2007-08-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.91.

2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.90.

2007-08-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in: use
	CTRL-ALT-DEL as default keybinding for 'Log out'.

2007-07-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.6.

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: remove spurious AT desktop entries (bug #444787)

2007-07-24  Thomas Wood  <thos@gnome.org>

	* configure.in: Update for recent appearance capplet re-organisation

2007-0723   Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump GTK+ requirement to 2.11.6

2007-07-19  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix last commit when building without gstreamer

2007-07-15  Jens Granseuer  <jensgr@gmx.net>

	* capplets/Makefile.am:
	* configure.in: don't fail if gstreamer is not available, but simply
	skip the sound capplet (closes bug #456957)

2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.5.

2007-07-09  Rodrigo Moya <rodrigo@gnome.db.org>

	* configure.in: AC_SUBST(XCURSOR... , needed for themus.

2007-06-24  Gabor Kelemen  <kelemeng@gnome.hu>

	* capplets/accessibility/at-properties/at-enable-dialog.glade: Fix typo in string. 
	(Closes bug #450405).

2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.4.

2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: add back gnome-theme-installer.desktop.in
