@@ -17,7 +17,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/volume_mute</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/volume_mute</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioMute</default>
             <locale name="C">
                 <short>Volume mute</short>
                 <long>Volume mute's shortcut.</long>
@@ -29,7 +29,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/volume_down</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/volume_down</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioLowerVolume</default>
             <locale name="C">
                 <short>Volume down</short>
                 <long>Volume down's shortcut.</long>
@@ -41,7 +41,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/volume_up</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/volume_up</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioRaiseVolume</default>
             <locale name="C">
                 <short>Volume up</short>
                 <long>Volume up's shortcut.</long>
@@ -171,7 +171,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/play</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/play</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioPlay</default>
             <locale name="C">
                 <short>Play (or play/pause)</short>
                 <long>Play (or play/pause) key's shortcut.</long>
@@ -183,7 +183,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/pause</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/pause</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioPause</default>
             <locale name="C">
                 <short>Pause</short>
                 <long>Pause key's shortcut.</long>
@@ -195,7 +195,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/stop</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/stop</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioStop</default>
             <locale name="C">
                 <short>Stop playback key</short>
                 <long>Stop playback key's shortcut.</long>
@@ -207,7 +207,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/previous</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/previous</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioPrev</default>
             <locale name="C">
                 <short>Skip to previous track</short>
                 <long>Previous track key's shortcut.</long>
@@ -219,7 +219,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/next</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/next</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioNext</default>
             <locale name="C">
                 <short>Skip to next track</short>
                 <long>Next track key's shortcut.</long>
