@@ -1,3 +1,10 @@
+2007-10-09  Bastien Nocera  <hadess@hadess.net>
+
+	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
+	Default to using XF86* keysyms for the audio related keybindings,
+	allows those to work out-of-the-box when the right keymap is
+	selected (Closes: #485076)
+
 2007-09-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* configure.in: fix typo in order to correctly substitute XCursor CFLAGS
